# zenova-school-erp

./: .env.example  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  PROGRESS.md  README.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  load_test.py  pyproject.toml  requirements.txt  seed_demo.py  seed_super_admin.py  sync_stress_test.py
backend/alembic/: env.py
backend/alembic/versions/: 56e806ae8fa1_initial.py  592860dea46f_add_deleted_at_to_5_remaining_tables.py  6c759f002a02_add_notification_prefs_and_telegram_bot.py  6d478aefeea0_add_password_recovery_tables.py  (+31 more)
backend/app/: config.py  database.py  main.py
backend/scripts/: backfill_tpm.py  build-coreval.py  create-lic-file.py  gen-license-keys.py  generate-rsa-keys.py  seed_demo.py  seed_super_admin.py
backend/tests/: conftest.py  test_api_integration.py  test_archive_service.py  test_attendance_service.py  test_auth.py  test_auth_service.py  test_chapa_service.py  test_circuit_breaker.py  test_config.py  test_corporate_service.py  test_error_codes.py  test_finance_security.py  test_finance_service.py  test_health.py  test_hr_service.py  test_id_service.py  test_license.py  test_mfa_service.py  test_nfc_v2_service.py  test_parent_payment_service.py  test_password_recovery.py  test_permissions.py  test_school_service.py  test_settings.py  test_staff_service.py  test_student_service.py  test_sync_service.py  test_teacher_service.py  test_tenant_isolation.py
deploy/: deploy.sh  (+7 more)
(+1128 files in other folders)
